# SistemaTransportePublico

./: .gitignore  README.md  README_API.md  init_db.py  logica.py  main.py  mainP.py  menus.py  requirements.txt  test_connection.py  test_neon_async.py  tools.py
Crud/: __init__.py  asignacionT_crud.py  auditoria_crud.py  empleado_crud.py  linea_crud.py  parada_crud.py  ruta_crud.py  tarjeta_crud.py  transacciones_crud.py  transporte_crud.py  usuario_crud.py
Entities/: __init__.py  asignacionT.py  auditoria.py  auth.py  empleado.py  linea.py  parada.py  roles.py  ruta.py  tarjeta.py  transaccion.py  transporte.py  usuario.py
Utilities/: dev_tools.py  init_db.py  logica.py  menus.py
api/: dependencies.py  exception_handlers.py
api/routers/: asignacion.py  auditoria.py  auth.py  dashboard.py  empleado.py  linea.py  parada.py  ruta.py  tarjeta.py  transaccion.py  transporte.py  usuarios.py
config/: pyproject.toml  requirements.txt
database/: __init__.py  config.py  database.py
docs/: BLACK_FORMATTING.md
seeders/: __init__.py  usuario_seeder.py
sistema-transporte-frontend/: README.md  angular.json  package-lock.json  package.json
sistema-transporte-frontend/src/: index.html  styles.scss
sistema-transporte-frontend/src/app/: app.config.ts  app.routes.ts  app.spec.ts  app.ts
sistema-transporte-frontend/src/app/core/guards/: auth.guard.ts
sistema-transporte-frontend/src/environments/: environment.prod.ts  environment.ts
src/: Bus.py  Gestor.py  Metro.py  Tarjeta.py  Transporte.py  Tranvia.py
(+25 files in other folders)
